Enhance ProPurchaseUtils for deterministic option iteration; add Math.random() seeding for reproducibility in snapshot tests